Последняя поправка к заданию 2

--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -4,81 +4,73 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting virtualenv\n",
-      "  Downloading virtualenv-20.26.1-py3-none-any.whl (3.9 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.9/3.9 MB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hCollecting platformdirs<5,>=3.9.1\n",
-      "  Downloading platformdirs-4.2.1-py3-none-any.whl (17 kB)\n",
-      "Collecting filelock<4,>=3.12.2\n",
-      "  Downloading filelock-3.14.0-py3-none-any.whl (12 kB)\n",
-      "Collecting distlib<1,>=0.3.7\n",
-      "  Downloading distlib-0.3.8-py2.py3-none-any.whl (468 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m468.9/468.9 kB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: distlib, platformdirs, filelock, virtualenv\n",
-      "  Attempting uninstall: platformdirs\n",
-      "    Found existing installation: platformdirs 2.5.2\n",
-      "    Uninstalling platformdirs-2.5.2:\n",
-      "      Successfully uninstalled platformdirs-2.5.2\n",
-      "  Attempting uninstall: filelock\n",
-      "    Found existing installation: filelock 3.6.0\n",
-      "    Uninstalling filelock-3.6.0:\n",
-      "      Successfully uninstalled filelock-3.6.0\n",
-      "Successfully installed distlib-0.3.8 filelock-3.14.0 platformdirs-4.2.1 virtualenv-20.26.1\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pip install virtualenv"
+    "from pyspark.sql import SparkSession\n",
+    "# Initialize Spark session\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"Task2\") \\\n",
+    "    .getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "24/05/03 14:53:29 WARN Utils: Your hostname, MacBook-Pro.local resolves to a loopback address: 127.0.0.1; using 192.168.0.3 instead (on interface en0)\n",
-      "24/05/03 14:53:29 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/05/03 14:54:00 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "24/05/03 14:54:15 WARN GarbageCollectionMetrics: To enable non-built-in garbage collector(s) List(G1 Concurrent GC), users should configure it(them) to spark.eventLog.gcMetrics.youngGenerationGarbageCollectors or spark.eventLog.gcMetrics.oldGenerationGarbageCollectors\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession\n",
-    "\n",
-    "# Initialize Spark session\n",
-    "spark = SparkSession.builder \\\n",
-    "    .appName(\"Task2\") \\\n",
-    "    .getOrCreate()\n",
-    "\n"
+    "#load dataset from hdfs\n",
+    "df=spark.read.option(\"header\", True).csv('hdfs://localhost:9000/input/india-news-headlines.csv')\n",
+    "# De-weight the entire DataFrame\n",
+    "df_distinct = df.dropDuplicates()\n",
+    "# Convert to rdd\n",
+    "news_rdd = df_distinct.rdd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. The top 10 years with the most news releases were counted"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-----+\n",
+      "|Year|Count|\n",
+      "+----+-----+\n",
+      "|2001|    1|\n",
+      "|2001|    1|\n",
+      "|2001|    1|\n",
+      "|2001|    1|\n",
+      "|2001|    1|\n",
+      "|2001|    1|\n",
+      "|2001|    1|\n",
+      "|2001|    1|\n",
+      "|2001|    1|\n",
+      "|2001|    1|\n",
+      "+----+-----+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Load data into an RDD\n",
-    "rdd = spark.sparkContext.textFile(\"hdfs://localhost:9000/data/india-news-headlines_copy_1_copy_1.csv\")\n"
+    "#use rdd map method to convert dataset\n",
+    "news_year_rdd = news_rdd.map(lambda row: (row[0][:4],1))\n",
+    "# Converts an RDD to a DataFrame and specifies the column names\n",
+    "news_year_df = spark.createDataFrame(news_year_rdd, [\"Year\", \"Count\"])\n",
+    "# Show DataFrame\n",
+    "news_year_df.show(10)"
    ]
   },
   {
@@ -90,123 +82,135 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error occurred: An error occurred while calling o26.partitions.\n",
-      ": java.net.ConnectException: Call From MacBook-Pro.local/127.0.0.1 to localhost:9000 failed on connection exception: java.net.ConnectException: Connection refused; For more details see:  http://wiki.apache.org/hadoop/ConnectionRefused\n",
-      "\tat java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)\n",
-      "\tat java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:75)\n",
-      "\tat java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:53)\n",
-      "\tat java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:502)\n",
-      "\tat java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:486)\n",
-      "\tat org.apache.hadoop.net.NetUtils.wrapWithMessage(NetUtils.java:913)\n",
-      "\tat org.apache.hadoop.net.NetUtils.wrapException(NetUtils.java:828)\n",
-      "\tat org.apache.hadoop.ipc.Client.getRpcResponse(Client.java:1616)\n",
-      "\tat org.apache.hadoop.ipc.Client.call(Client.java:1558)\n",
-      "\tat org.apache.hadoop.ipc.Client.call(Client.java:1455)\n",
-      "\tat org.apache.hadoop.ipc.ProtobufRpcEngine2$Invoker.invoke(ProtobufRpcEngine2.java:242)\n",
-      "\tat org.apache.hadoop.ipc.ProtobufRpcEngine2$Invoker.invoke(ProtobufRpcEngine2.java:129)\n",
-      "\tat jdk.proxy2/jdk.proxy2.$Proxy38.getFileInfo(Unknown Source)\n",
-      "\tat org.apache.hadoop.hdfs.protocolPB.ClientNamenodeProtocolTranslatorPB.getFileInfo(ClientNamenodeProtocolTranslatorPB.java:965)\n",
-      "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
-      "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:75)\n",
-      "\tat java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:52)\n",
-      "\tat java.base/java.lang.reflect.Method.invoke(Method.java:580)\n",
-      "\tat org.apache.hadoop.io.retry.RetryInvocationHandler.invokeMethod(RetryInvocationHandler.java:422)\n",
-      "\tat org.apache.hadoop.io.retry.RetryInvocationHandler$Call.invokeMethod(RetryInvocationHandler.java:165)\n",
-      "\tat org.apache.hadoop.io.retry.RetryInvocationHandler$Call.invoke(RetryInvocationHandler.java:157)\n",
-      "\tat org.apache.hadoop.io.retry.RetryInvocationHandler$Call.invokeOnce(RetryInvocationHandler.java:95)\n",
-      "\tat org.apache.hadoop.io.retry.RetryInvocationHandler.invoke(RetryInvocationHandler.java:359)\n",
-      "\tat jdk.proxy2/jdk.proxy2.$Proxy39.getFileInfo(Unknown Source)\n",
-      "\tat org.apache.hadoop.hdfs.DFSClient.getFileInfo(DFSClient.java:1739)\n",
-      "\tat org.apache.hadoop.hdfs.DistributedFileSystem$29.doCall(DistributedFileSystem.java:1753)\n",
-      "\tat org.apache.hadoop.hdfs.DistributedFileSystem$29.doCall(DistributedFileSystem.java:1750)\n",
-      "\tat org.apache.hadoop.fs.FileSystemLinkResolver.resolve(FileSystemLinkResolver.java:81)\n",
-      "\tat org.apache.hadoop.hdfs.DistributedFileSystem.getFileStatus(DistributedFileSystem.java:1765)\n",
-      "\tat org.apache.hadoop.fs.Globber.getFileStatus(Globber.java:115)\n",
-      "\tat org.apache.hadoop.fs.Globber.doGlob(Globber.java:349)\n",
-      "\tat org.apache.hadoop.fs.Globber.glob(Globber.java:202)\n",
-      "\tat org.apache.hadoop.fs.FileSystem.globStatus(FileSystem.java:2142)\n",
-      "\tat org.apache.hadoop.mapred.FileInputFormat.singleThreadedListStatus(FileInputFormat.java:276)\n",
-      "\tat org.apache.hadoop.mapred.FileInputFormat.listStatus(FileInputFormat.java:244)\n",
-      "\tat org.apache.hadoop.mapred.FileInputFormat.getSplits(FileInputFormat.java:332)\n",
-      "\tat org.apache.spark.rdd.HadoopRDD.getPartitions(HadoopRDD.scala:208)\n",
-      "\tat org.apache.spark.rdd.RDD.$anonfun$partitions$2(RDD.scala:294)\n",
-      "\tat scala.Option.getOrElse(Option.scala:189)\n",
-      "\tat org.apache.spark.rdd.RDD.partitions(RDD.scala:290)\n",
-      "\tat org.apache.spark.rdd.MapPartitionsRDD.getPartitions(MapPartitionsRDD.scala:49)\n",
-      "\tat org.apache.spark.rdd.RDD.$anonfun$partitions$2(RDD.scala:294)\n",
-      "\tat scala.Option.getOrElse(Option.scala:189)\n",
-      "\tat org.apache.spark.rdd.RDD.partitions(RDD.scala:290)\n",
-      "\tat org.apache.spark.api.java.JavaRDDLike.partitions(JavaRDDLike.scala:61)\n",
-      "\tat org.apache.spark.api.java.JavaRDDLike.partitions$(JavaRDDLike.scala:61)\n",
-      "\tat org.apache.spark.api.java.AbstractJavaRDDLike.partitions(JavaRDDLike.scala:45)\n",
-      "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
-      "\tat java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:75)\n",
-      "\tat java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:52)\n",
-      "\tat java.base/java.lang.reflect.Method.invoke(Method.java:580)\n",
-      "\tat py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\n",
-      "\tat py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:374)\n",
-      "\tat py4j.Gateway.invoke(Gateway.java:282)\n",
-      "\tat py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\n",
-      "\tat py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
-      "\tat py4j.ClientServerConnection.waitForCommands(ClientServerConnection.java:182)\n",
-      "\tat py4j.ClientServerConnection.run(ClientServerConnection.java:106)\n",
-      "\tat java.base/java.lang.Thread.run(Thread.java:1583)\n",
-      "Caused by: java.net.ConnectException: Connection refused\n",
-      "\tat java.base/sun.nio.ch.Net.pollConnect(Native Method)\n",
-      "\tat java.base/sun.nio.ch.Net.pollConnectNow(Net.java:682)\n",
-      "\tat java.base/sun.nio.ch.SocketChannelImpl.finishConnect(SocketChannelImpl.java:973)\n",
-      "\tat org.apache.hadoop.net.SocketIOWithTimeout.connect(SocketIOWithTimeout.java:205)\n",
-      "\tat org.apache.hadoop.net.NetUtils.connect(NetUtils.java:586)\n",
-      "\tat org.apache.hadoop.ipc.Client$Connection.setupConnection(Client.java:711)\n",
-      "\tat org.apache.hadoop.ipc.Client$Connection.setupIOstreams(Client.java:833)\n",
-      "\tat org.apache.hadoop.ipc.Client$Connection.access$3800(Client.java:414)\n",
-      "\tat org.apache.hadoop.ipc.Client.getConnection(Client.java:1677)\n",
-      "\tat org.apache.hadoop.ipc.Client.call(Client.java:1502)\n",
-      "\t... 50 more\n",
+      "+----+------+\n",
+      "|Year| Count|\n",
+      "+----+------+\n",
+      "|2016|254168|\n",
+      "|2018|253294|\n",
+      "|2014|253240|\n",
+      "|2013|253098|\n",
+      "|2015|252966|\n",
+      "|2012|252915|\n",
+      "|2017|251375|\n",
+      "|2011|240784|\n",
+      "|2009|203990|\n",
+      "|2020|182087|\n",
+      "+----+------+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "import time \n",
-    "# Define RDD transformations\n",
-    "try:\n",
-    "    # Start timer\n",
-    "    start_time = time.time()\n",
-    "\n",
-    "    # Transformation 1: map\n",
-    "    mapped_rdd = rdd.map(lambda line: line.split(\",\"))  # Split each line by comma\n",
-    "\n",
-    "    # Transformation 2: flatMap\n",
-    "    words_rdd = rdd.flatMap(lambda line: line.split())  # Split each line into words\n",
-    "\n",
-    "    # Transformation 3: reduceByKey\n",
-    "    word_count_rdd = words_rdd.map(lambda word: (word, 1)).reduceByKey(lambda x, y: x + y)  # Count occurrence of each word\n",
-    "\n",
-    "    # Print sample results\n",
-    "    print(\"Sample results after transformations:\")\n",
-    "    print(\"Mapped RDD:\")\n",
-    "    print(mapped_rdd.take(5))  # Take first 5 elements\n",
-    "    print(\"Word Count RDD:\")\n",
-    "    print(word_count_rdd.take(5))  # Take first 5 elements\n",
-    "\n",
-    "    # End timer\n",
-    "    end_time = time.time()\n",
-    "    # Calculate execution time\n",
-    "    execution_time = end_time - start_time\n",
-    "    print(f\"Execution Time: {execution_time} seconds\")\n",
-    "\n",
-    "except Exception as e:\n",
-    "    print(f\"Error occurred: {e}\")\n",
-    "\n",
-    "# Stop Spark session\n",
-    "spark.stop()\n"
+    "news_year_count_rdd=news_year_rdd.reduceByKey(lambda a,b:a+b)\n",
+    "# Sorting RDDs by sortBy and descending by count\n",
+    "news_year_count_rdd = news_year_count_rdd.sortBy(lambda x: x[1], ascending=False).take(10)\n",
+    "# Converts an RDD to a DataFrame and specifies the column names\n",
+    "news_year_top_10 = spark.createDataFrame(news_year_count_rdd, [\"Year\", \"Count\"])\n",
+    "# Show DataFrame\n",
+    "news_year_top_10.show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Specify the top 10 word frequencies in a news category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining a list of deactivated words\n",
+    "stopwords = set([\"the\", \"is\", \"in\", \"at\", \"which\", \"on\", \"and\", \"a\", \"to\", \"of\"]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+------------+\n",
+      "|category|        word|\n",
+      "+--------+------------+\n",
+      "| history|        1930|\n",
+      "| history|    Hamilton|\n",
+      "| history|     British|\n",
+      "| history|      Empire|\n",
+      "| history|       Games|\n",
+      "| history|        1958|\n",
+      "| history|     Cardiff|\n",
+      "| history|     British|\n",
+      "| history|      Empire|\n",
+      "| history|Commonwealth|\n",
+      "+--------+------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    " #Filtering specific categories of data\n",
+    "filter_category = \"history\"   \n",
+    "filter_category_rdd = news_rdd.filter(lambda row: row[1] == filter_category)\n",
+    "# Extracting words from headings using flatMap\n",
+    "flatMap_rdd = filter_category_rdd.flatMap(lambda row: [(row[1], word) for word in row[2].split()])\n",
+    "# Filter out stop words\n",
+    "flatMap_rdd = flatMap_rdd.filter(lambda x: x[1].lower() not in stopwords)\n",
+    "# Converts an RDD to a DataFrame and specifies the column names\n",
+    "flatMap_df = spark.createDataFrame(flatMap_rdd, [\"category\", \"word\"])\n",
+    "# Show DataFrame\n",
+    "flatMap_df.show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+-----+\n",
+      "|        word|count|\n",
+      "+------------+-----+\n",
+      "|       Games|   19|\n",
+      "|Commonwealth|   15|\n",
+      "|     British|   10|\n",
+      "|      Empire|    8|\n",
+      "|     Thunder|    4|\n",
+      "|        Down|    4|\n",
+      "|       Under|    4|\n",
+      "|   Wimbledon|    4|\n",
+      "|        clay|    3|\n",
+      "|       Open:|    3|\n",
+      "+------------+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the word frequency of each word\n",
+    "word_count_rdd = flatMap_rdd.map(lambda x: (x[1], 1)).reduceByKey(lambda a, b: a + b)\n",
+    "# Get the top 10 words with the most occurrences\n",
+    "top_10_words = word_count_rdd.sortBy(lambda x: x[1], ascending=False).take(10)\n",
+    "# Converts an RDD to a DataFrame and specifies the column names\n",
+    "top_10_words_df = spark.createDataFrame(top_10_words, [\"word\", \"count\"])\n",
+    "# Show DataFrame\n",
+    "top_10_words_df.show(10)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -220,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
